@@ -22,6 +22,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10750: The ``raw`` attribute of buffered IO objects is now read-only.
+
 - Issue #10242: unittest.TestCase.assertItemsEqual makes too many assumgptions
   about input.
 
